versions/3.2.0/docs/Comment.md
# Comment

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] [readonly] 
**assignee** | [**ElementsUserMini**](ElementsUserMini.md) |  | [optional] 
**user** | [**ElementsUserMini**](ElementsUserMini.md) |  | [optional] 
**drawing** | **dict(str, str)** |  | [optional] 
**tags** | [**list[Tag]**](Tag.md) |  | [optional] 
**full_asset** | [**Asset**](Asset.md) |  | [optional] 
**sync_id** | **str** |  | [optional] [readonly] 
**date** | **datetime** |  | [optional] [readonly] 
**text** | **str** |  | [optional] 
**time** | **float** |  | [optional] 
**is_cloud** | **bool** |  | [optional] 
**resolved** | **bool** |  | [optional] 
**resolved_date** | **datetime** |  | [optional] 
**asset** | **int** |  | 
**root** | **int** |  | [optional] 
**parent** | **int** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


